--- a/front/dir-share/package.json
+++ b/front/dir-share/package.json
@@ -13,6 +13,7 @@
     "@iconify/json": "^2.2.239",
     "clsx": "^2.1.1",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18"
   },
